♻️ Refactor: post-service/.env 추가 및 coderabbit feedback 리팩토링